[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="player_name" type="TextEdit" parent="CanvasLayer"]
margin_left = 262.0
margin_top = 60.0
margin_right = 351.0
margin_bottom = 90.0
text = "TESTPLAYER"

[node name="lobby_name" type="TextEdit" parent="CanvasLayer"]
margin_left = 262.0
margin_top = 109.0
margin_right = 351.0
margin_bottom = 140.0
text = "TESTLOBBY"

[node name="host_game" type="Button" parent="CanvasLayer"]
margin_left = 260.0
margin_top = 170.0
margin_right = 349.0
margin_bottom = 190.0
text = "HOST GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host_address" type="TextEdit" parent="CanvasLayer"]
margin_left = 220.0
margin_top = 259.0
margin_right = 387.0
margin_bottom = 308.0
text = "192.168.178.31:1234"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_game" type="Button" parent="CanvasLayer"]
margin_left = 258.0
margin_top = 329.0
margin_right = 347.0
margin_bottom = 349.0
text = "JOIN GAME"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/host_game" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="CanvasLayer/join_game" to="." method="_on_join_game_pressed"]
